# MTG-DiscordBot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  config.py  main.py  mkdocs.yml  print.py  pyproject.toml  requirements.txt
devel/: badges.sh  coverage.sh  deploy.sh
docs/: README.md
docs/src/example/: file.md  index.md
src/example/: __init__.py  file.py
tests/example/: test_file.py
